clang/test/BSC/Negative/Ownership/Borrow/borrow_assign/borrow_assign.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

_Trait F {
    void foo(This* _Borrow this);
};
struct R {
    int * _Borrow p1;
    const int * _Borrow p2;
};

typedef int * _Borrow myInt;

void int::foo(This * _Borrow this) {}

_Impl _Trait F for int;

void test() {
    int x = 0;
    float y = 1.0;
    int *_Borrow p = &_Mut x;          // legal
    float * _Borrow py = &_Mut y;     // legal
    const int * _Borrow p1 = &_Const x; // legal
    int *_Borrow p2 = &_Const x;          // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
    const int * _Borrow p3 = &_Mut x; // allow in-place re-borrowing
    const int * _Borrow p4 = &x; // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'const int *_Borrow'}}
    const int * _Borrow *p5 = &_Const x; // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'const int *_Borrow *'}}
    int *p6 = &_Mut x; // expected-error {{incompatible _Borrow types, cannot cast 'int *_Borrow' to 'int *'}}

    p = p2; // legal
    p = py; // expected-error {{incompatible _Borrow types, cannot cast 'float *_Borrow' to 'int *_Borrow'}}
    p = p1; // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
    p1 = p; // allow re-borrowing
    struct R r = { .p1 = p1, .p2 = p2 }; // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow}}
    struct R r1 = { p1, p2 }; // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow}}
    r.p1 = p1; // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
    r.p1 = p; // legal

    myInt m = &x; // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'myInt' (aka 'int *_Borrow')}}
    myInt m1 = &_Mut x; // legal
    m = &_Const x; // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'myInt' (aka 'int *_Borrow')}}

    _Trait F * f = &x; // legal
    _Trait F * _Borrow f1 = p; // legal
    _Trait F * _Borrow f2 = py; // expected-error {{incompatible _Borrow types, cannot cast 'float *_Borrow' to '_Trait F *_Borrow'}}
                              // expected-error@-1 {{expected a pointer type which has implemented '_Trait F', found 'float'}}
    f1 = py; // expected-error {{expected a pointer type which has implemented '_Trait F', found 'float'}}
    f1 = p; // legal
    //p = (int * _Borrow)f1; // legal
    f1->foo();
}